Some cleanup and fixes.

--- a/databases.html
+++ b/databases.html
@@ -5,74 +5,70 @@ hide_header: true
 permalink: /databases/
 ---
 
-<div class="databases-index">
+<div class="fl w-75-l w-100 pv2">
+  <h1 class="fw1 mt3 mb2">Catalogue of Research Databases</h1>
+  <p class="silver">
+    Below is a collection of the most useful public data sources for investigative reporting compiled by OCCRP's researchers.
+  </p>
+</div>
 
-  <div class="fl w-75-l w-100 pv2">
-    <h1 class="fw1 mt3 mb2">Catalogue of Research Databases</h1>
-    <p class="gray-mid">
-      Below is a collection of the most useful public data sources for investigative reporting compiled by OCCRP's researchers.
-    </p>
+<div class="fl w-25-l w-100 ph3 pv4 br2 ba b--moon-gray">
+  <div class="mb3">Didn't find what you were looking for?</div>
+  <a href="/tickets/new" class="link ph3 pv2 dib br2 white bg-red-id">
+    <i class="fa fa-comments-o"></i> Submit a research request
+  </a>
+</div>
+
+<div class="fl w-75-l w-100 pv3 pr3-l regions-container">
+  <div class="bb b--moon-gray db-nav">
+    <ul class="ma0 pa0 list">
+      {% for region in site.data.databases.location_data %}
+        {% assign region_data = region[1] %}
+        <li class="dib pointer br2 br--top red-id {% if forloop.first %} current {% endif %}" data-tab="tab-{{region[0]}}">
+          {{ region_data.name }}
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 
-  <div class="fl w-25-l w-100 ph3 pv4 ba br2 submit-request-container">
-    <div class="mb3">Didn't find what you were looking for?</div>
-    <a href="/tickets/new" class="link ph3 pv2 dib br2 white bg-red-id">
-      <i class="fa fa-comments-o"></i>
-      Submit a research request
-    </a>
-  </div>
+  {% for region in site.data.databases.location_data %}
+    {% assign region_data = region[1] %}
 
-
-  <div class="fl w-75-l w-100 pv3 pr3 regions-container">
-    <div class="db-nav">
-      <ul class="ma0 pa0 list tabs">
-        {% for region in site.data.databases.location_data %}
-          {% assign region_data = region[1] %}
-          <li class="dib tab-link {% if forloop.first %} current {% endif %}" data-tab="tab-{{region[0]}}">
-            {{region_data.name}}
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-
-    {% for region in site.data.databases.location_data %}
-      {% assign region_data = region[1] %}
-
-      <div id="tab-{{region[0]}}" class="pv3 tab-content {% if forloop.first %} current {% endif %}">
-        {% for country in region_data.countries %}
-          {% assign country_entries = site.data.databases.entries | where: 'country', country.code %}
-          {% if country_entries.size > 0 %}
-            <div class="fl w-third-ns w-50-m w-100 pv2">
-              <a href="/databases/countries/{{country.code}}" class="link underline-hover">{{country.name}}</a>
-              <div class="b dib f6 pl2 gray-mid">{{country_entries.size}}</div>
-            </div>
-          {% endif %}
-        {% endfor %}
-      </div>
-    {% endfor %}
-  </div>
-
-  <div class="fl w-25-l w-100 pv3">
-
-    <div class="db-nav">
-      <ul class="ma0 pa0 list tabs">
-        <li class="dib pv2 ph3 tab-link current">Database types</li>
-      </ul>
-    </div>
-
-    {% assign db_type_entries = site.data.databases.entries | group_by: "db_type" | sort: "size" | reverse %}
-
-    <div class="pv3 tab-content">
-      {% for db_type_group in db_type_entries %}
-        {% assign db_type_obj = site.data.databases.database_types | where: 'shortname', db_type_group.name %}
-
-        {% if db_type_group.name %}
-          <div class="pv2">
-            <a href="/databases/topics/{{db_type_group.name}}" class="link underline-hover">{{db_type_obj[0].name}}</a>
-            <div class="b dib f6 pl2 gray-mid">{{db_type_group.size}}</div>
+    <div id="tab-{{region[0]}}" class="pv3 tab-content {% if forloop.first %} current {% endif %}">
+      {% for country in region_data.countries %}
+        {% assign country_entries = site.data.databases.entries | where: 'country', country.code %}
+        {% if country_entries.size > 0 %}
+          <div class="fl w-third-ns w-50-m w-100 pv2">
+            <a href="/databases/countries/{{country.code}}" class="link underline-hover">{{ country.name }}</a>
+            <div class="b dib f6 pl2 silver">{{ country_entries.size }}</div>
           </div>
         {% endif %}
       {% endfor %}
     </div>
+  {% endfor %}
+</div>
+
+<div class="fl w-25-l w-100 pv3">
+
+  <div class="bb b--moon-gray db-nav">
+    <ul class="ma0 pa0 list">
+      <li class="dib br2 br--top pointer red-id current">Database types</li>
+    </ul>
+  </div>
+
+  {% assign db_type_entries = site.data.databases.entries | group_by: "db_type" | sort: "size" | reverse %}
+
+  <div class="pv3 tab-content">
+    {% for db_type_group in db_type_entries %}
+      {% assign db_type = site.data.databases.database_types[db_type_group.name] %}
+
+      {% if db_type.shortname != "" %}
+        <div class="pv2">
+          <a href="/databases/topics/{{db_type_group.name}}" class="link underline-hover">{{ db_type.name }}</a>
+          <div class="b dib f6 pl2 silver">{{ db_type_group.size }}</div>
+        </div>
+      {% endif %}
+
+    {% endfor %}
   </div>
 </div>
